Thu Nov 29 17:58:18 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Expose an API for setting the minimum
	  weight or percentage allowed for a result to be returned; this is
	  done by supplying the percentcutoff or weightcutoff parameters to
	  SearchConnection.search()
	* xappy/searchconnection_doctest2.txt: Test the weight and
	  percentage cutoff parameters.

Wed Nov 28 10:18:43 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix returning of empty facet value,
	  which translates into numeric range from -inf to -inf: this is
	  returned when some documents do not have an entry in a numeric
	  range, with a count of the number of documents which matched but
	  didn't have a numeric facet.  Just ignore this information.

Wed Nov 28 08:37:08 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Remove a typo.

Wed Nov 28 08:15:09 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst,xappy/indexerconnection_doctest2.txt,
	  xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Modify query parsing to ensure that exact matches are given a
	  higher weight than stemmed or synonym matches.  Update testcases
	  accordingly.

Wed Nov 28 07:34:21 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/: Update the xapian tarballs; these now include OP_SYNONYM
	  and use it for synonym searches, wildcards, and partial searches.

Tue Nov 27 22:39:54 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Add script to update the xappy
	  tarballs from xapian SVN.

Mon Nov 26 14:51:24 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* testsuite/runtests.py: Call close methods on anything from xappy
	  which has one when cleaning up.

Mon Nov 26 14:11:46 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection_doctest1.txt: Windows doesn't give a