@@ -1,3 +1,10 @@
+Mon Dec 03 18:01:51 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
+	  Add ability to set a callback on SearchConnection to be called
+	  when the object is closed (even if this is an implicit close due
+	  to being deleted).
+
 Thu Nov 29 17:58:18 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Expose an API for setting the minimum
